2006-11-30  Jonathan Pryor  <jonpryor@vt.edu>

	* map.c: _cnm_return_val_if_overflow() should be a no-op unless DEBUG is
	  defined.  "Fixes" false positives pending further investigation.

2006-11-18  Miguel de Icaza  <miguel@novell.com>

	* serial.c (poll_serial): Do not report an error for EINTR. 

2006-11-18  Jelle Hissink  <Jelle.Hissink@C-it.nl>

	* serial.c (poll_serial): Add timeout parameter to poll.

	Fixes #79722 and #79735

2006-11-17  Jonathan Pryor  <jonpryor@vt.edu>

	* map.c: Flush (fix FromFilePermissions for SuppressFlags-marked values).

2006-11-15  Jonathan Pryor  <jonpryor@vt.edu>

	* map.c: Flush (removes warnings due to _cnm_return_val_if_overflow()).

2006-11-14  Jonathan Pryor  <jonpryor@vt.edu>

	* map.c: Flush (fixes FilePermissions conversion, allowing Syscall.stat() to
	  work as expected).

2006-11-13  Jonathan Pryor  <jonpryor@vt.edu>

	* mph.h: Add macro for XATTR_AUTO, so that XattrFlags mapping works (as
	  XATTR_AUTO is a value which frequently isn't definedy by any OS, yet it
	  has the value 0, a default value which is supported by most OS's).

2006-11-08  Jonathan Pryor  <jonpryor@vt.edu>

	* Makefile.am: Revert addition of L_SET et al; this breaks the Win32 build.
	* map.c: Revert addition of L_SET et al; this breaks the Win32 build.
	* mph.h: Add macros for L_SET, L_INCR, and L_XTND for non-Win32 platforms.

2006-11-07  Jonathan Pryor  <jonpryor@vt.edu>

	* Makefile.am: Add implementation macros for L_SET, L_INCR, and L_XTND.
	* map.c: Make sure that L_SET, L_INCR, and L_XTND are defined.  Lets
	  Mono_Posix_FromSeekFlags() work on Solaris, fixing Gnome Bugzilla 370081.

2006-11-01  Jonathan Pryor  <jonpryor@vt.edu>

	* stdio.c: Some BSDs define clearerr(3) as a macro, so we need to cast
	  `stream' to a `FILE*' to avoid derefing a `void*'.
	* sys-statvfs.c: Build fix to support OS X 10.3.9 & systems w/o statvfs(2).

2006-11-01  Jonathan Pryor  <jonpryor@vt.edu>
